# StatistiCalculator

./: CMakeLists.txt  Documentation.lnk  Doxyfile
SC_GUI/: CMakeLists.txt
SC_GUI/include/win/: MenuBar.h  Window.h
SC_GUI/src/: main.cpp
SC_GUI/src/menu/: menu.cpp
SC_GUI/src/win/: MenuBar.cpp  Window.cpp
StatistiCalculator/include/file/: file_errors.h  file_parser.h
StatistiCalculator/include/menu/: menu.h
StatistiCalculator/include/settings/: options.h
StatistiCalculator/include/stat/: Data.h  DataIO.h  DataPoint.h  Dataset.h  Stat.h  StatIO.h  Text.h  TextIO.h  statistical_analysis.h
StatistiCalculator/include/structures/: BinarySearchTree.h  Exception.h  Vector.h
StatistiCalculator/src/file/: file_errors.cpp  file_parser.cpp
StatistiCalculator/src/settings/: options.cpp
StatistiCalculator/src/stat/: Data.cpp  DataIO.cpp  Dataset.cpp  Stat.cpp  StatIO.cpp  Text.cpp  TextIO.cpp  statistical_analysis.cpp
StatistiCalculator/src/structures/: Exception.cpp
StatistiCalculator/tests/: CMakeLists.txt
StatistiCalculator/tests/Dataset/: CMakeLists.txt  main.cpp
StatistiCalculator/tests/Vector/: CMakeLists.txt  main.cpp
Terminal/: CMakeLists.txt
Terminal/include/: framework.h
Terminal/src/: main.cpp  menu.cpp
Terminal/src/menu/: menu.cpp
